Modification in indexfile and new file style.css added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is the landing page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, cumque! Consequatur dolor maiores omnis cupiditate, fugiat vitae quos, distinctio qui ab odit sequi aut nisi explicabo sed eveniet dolore labore.</p>
 </body>
 </html>
